--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "gfx-shader-watch"
+name = "gfx_shader_watch"
 version = "0.1.0"
 authors = ["Alex Butler <alexheretic@gmail.com>"]
 
