--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,12 +9,12 @@ license = "Apache-2.0"
 
 [dependencies]
 gfx = "0.16"
-log = "0.3"
+log = "0.4"
 notify = "4"
 
 [dev-dependencies]
 gfx_window_glutin = "0.19"
-env_logger = "0.4"
+env_logger = "0.5.0-rc.1"
 glutin = "0.11"
 
 [[example]]
