--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,12 @@
-sudo: false
 language: rust
-cache:
-  cargo: true
-rust:
-- stable
-- nightly
-env:
-- RUST_BACKTRACE=full
+rust: stable
+env: RUST_BACKTRACE=full
 matrix:
-  allow_failures:
-  - rust: nightly
-  - os: osx
-  fast_finish: true
+  include:
+  - os: linux
+    rust: nightly
 os:
 - linux
 - osx
-script:
-- cargo test
+- windows
+script: cargo test
