--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,9 +14,9 @@ log = "0.4"
 notify = "4"
 
 [dev-dependencies]
-gfx_window_glutin = "0.31"
-env_logger = "0.6"
-glutin = "0.21"
+env_logger = "0.7"
+glutin = "0.22"
+old_school_gfx_glutin_ext = "0.22"
 
 [[example]]
 name = "watch-shaders"
