--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ notify = "5"
 [dev-dependencies]
 env_logger = "0.10"
 glutin = "0.30.3"
-old_school_gfx_glutin_ext = { git = "https://github.com/alexheretic/old-school-gfx-glutin-ext" }
+old_school_gfx_glutin_ext = "0.30"
 winit = "0.27"
 
 [[example]]
